<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_pop_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_28"
        android:background="@drawable/shape_ffffff_15"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_two_bt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/mine_about"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/Font_Middle_Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="1"
                        android:paddingBottom="@dimen/dp_5"
                        android:text="@string/mine_about_name" />

                    <TextView
                        android:id="@+id/tv_version"
                        style="@style/Font_Middle_Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="1"
                        android:paddingBottom="@dimen/dp_5"
                        android:text="@string/mine_version" />

                    <TextView
                        android:id="@+id/tv_copyright"
                        style="@style/Font_Middle_Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="1"
                        android:paddingBottom="@dimen/dp_5"
                        android:text="@string/mine_property_in_copyright" />

                    <TextView
                        android:id="@+id/tv_company"
                        style="@style/Font_Middle_Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dp_5"
                        android:text="@string/mine_company" />
                    <!--                        android:text="@string/setting_tab_dialog_about_company" />-->

                    <TextView
                        android:id="@+id/tv_update_date"
                        style="@style/Font_Middle_Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:gravity="left"
                        android:text="@string/mine_updated_date" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>