<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.company.shenzhou.ui.activity.CopyActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/back_debug_ping_tool" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlAccentColor="@color/gray"
        app:srlEnablePureScrollMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hjq.widget.view.ClearEditText
                    android:id="@+id/et_ip"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_35"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="@dimen/dp_35"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_input_bg"
                    android:hint="@string/ping_please_input_address"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="#333333"
                    android:textColorHint="@color/black20"
                    android:textSize="@dimen/sp_13" />

                <Button
                    android:id="@+id/btn_start_ping"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_35"
                    android:background="@drawable/selector_item_ffffff_test"
                    android:text="开始"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_4"
                    android:paddingBottom="@dimen/dp_4"
                    android:text="@string/ping_start"
                    android:textColor="@color/black333333"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ip_adress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ping_ip_address"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/times"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ping_no_pings"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_13" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/packet_lost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ping_packet_lost"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/average_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ping_average_time_taken"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_13" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/min_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ping_min_time_taken"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/max_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ping_max_time_taken"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_13" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/selector_item_ffffff_test"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/ping_look_details"
                android:textColor="@color/white" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_content_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_detail_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="@dimen/sp_13"
                        android:visibility="gone" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>


    </com.scwang.smart.refresh.layout.SmartRefreshLayout>


</LinearLayout>