<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dp_55"
    android:layout_marginRight="@dimen/dp_55"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp_5"
    app:cardElevation="0px">

    <LinearLayout
        android:id="@+id/ll_ui_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <com.hjq.widget.view.SmartTextView
            android:id="@+id/tv_ui_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="标题" />


        <RelativeLayout
            android:id="@+id/relative_scan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:gravity="center">

            <ImageView

                android:id="@+id/iv_scan_noe"
                android:scaleType="centerInside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_video_code" />

            <TextView
                android:id="@+id/tv_scan_tow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_toRightOf="@+id/iv_scan_noe"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_8"
                android:text="@string/device_scan"
                android:textColor="#31bdf3"
                android:textSize="15sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:orientation="horizontal">

            <com.hjq.widget.view.SmartTextView
                android:id="@+id/tv_ui_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/transparent_selector"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/common_cancel"
                android:textColor="@color/colorCancel"
                android:textSize="@dimen/sp_14" />

            <View
                android:id="@+id/v_ui_line"
                android:layout_width="@dimen/line_size"
                android:layout_height="match_parent"
                android:background="@color/colorLine" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ui_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/transparent_selector"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/common_confirm"
                android:textColor="@color/colorConfirm"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>